docs: fix Cech accent in notebook and add new notebook to documentation

--- a/docs/notebooks/parameter_standard_range.ipynb
+++ b/docs/notebooks/parameter_standard_range.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The purpose of this example is to demonstrate the effect of the <tt>standard_range</tt> parameter.\n",
     "\n",
-    "For efficiency reasons, the algorithms implemented in this library work with Rips complexes; however, when this parameter is set to <tt>True</tt>, the output of the algorithms are guaranteed to represent non-trivial, continuous maps on the \\v{C}ech complex of the data.\n",
+    "For efficiency reasons, the algorithms implemented in this library work with Rips complexes; however, when this parameter is set to <tt>True</tt>, the output of the algorithms are guaranteed to represent non-trivial, continuous maps on the Čech complex of the data.\n",
     "In order to be able to guarantee this, the persistent cohomology class has to be sufficiently long, in the following sense: if the persistent cohomology class is represented by a point $(a,b)$ in the persistence diagram, we must have $2a < b$.\n",
     "If $2a \\geq b$ and <tt>standard_range</tt> is set to <tt>True</tt>, the algorithm will return an error, and suggest setting <tt>standard_range</tt> to <tt>False</tt>.\n",
     "\n",
