docs: reflect minor interface change in notebook

--- a/docs/notebooks/MooreSpace.ipynb
+++ b/docs/notebooks/MooreSpace.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "lc = LensCoords(dist_mat, n_landmarks=500, distance_matrix=True)\n",
-    "coords = lc.get_coordinates(perc=0.99, lens_dim=2, cocycle_idx=0, projective_dim_red_mode=\"exponential\")\n",
+    "coords = lc.get_coordinates(perc=0.99, complex_dim=2, cocycle_idx=0)\n",
     "coords_R3 = LensMapUtils.lens_3D_to_disk_3D(coords, 3)"
    ]
   },
