--- a/docs/notebooks/circleLensCoordinates.ipynb
+++ b/docs/notebooks/circleLensCoordinates.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "X = GeometryExamples.noisy_circle(500)\n",
     "lc = LensCoords(X, n_landmarks=50)\n",
-    "coords = lc.get_coordinates(perc=0.9, lens_dim=2, cocycle_idx=0)\n",
+    "coords = lc.get_coordinates(perc=0.9, complex_dim=2, cocycle_idx=0)\n",
     "coords_R3 = LensMapUtils.lens_3D_to_disk_3D(coords, 3)"
    ]
   },
