add comments to paper draft

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -90,3 +90,23 @@ MRREVIEWER = {Ne\v{z}a\ Mramor Kosta},
   biburl       = {https://dblp.org/rec/conf/cccg/PolancoP19.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{persistent-cohomology,
+    AUTHOR = {de Silva, Vin and Morozov, Dmitriy and Vejdemo-Johansson,
+              Mikael},
+     TITLE = {Dualities in persistent (co)homology},
+   JOURNAL = {Inverse Problems},
+  FJOURNAL = {Inverse Problems. An International Journal on the Theory and
+              Practice of Inverse Problems, Inverse Methods and Computerized
+              Inversion of Data},
+    VOLUME = {27},
+      YEAR = {2011},
+    NUMBER = {12},
+     PAGES = {124003, 17},
+      ISSN = {0266-5611,1361-6420},
+   MRCLASS = {55N35},
+  MRNUMBER = {2854319},
+MRREVIEWER = {Patrizio\ Frosini},
+       DOI = {10.1088/0266-5611/27/12/124003},
+       URL = {https://doi.org/10.1088/0266-5611/27/12/124003},
+}
