add coil-20 example

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -110,3 +110,9 @@ MRREVIEWER = {Patrizio\ Frosini},
        DOI = {10.1088/0266-5611/27/12/124003},
        URL = {https://doi.org/10.1088/0266-5611/27/12/124003},
 }
+
+@article{coil-20,
+  title={Columbia object image library ({coil}-20)},
+  author={Nene, Sameer A and Nayar, Shree K and Murase, Hiroshi and others},
+  year={1996},
+}
