docs: fix a few more typos in notebooks

--- a/docs/notebooks/MooreSpace.ipynb
+++ b/docs/notebooks/MooreSpace.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Lens coordinates on Moore space\n",
     "\n",
-    "In this example, we use lens coordinates to parametrize a finite sample of the Moore space $M(1,\\mathbb{Z}/3)$, characterized by the fact that its reduce homology with coefficients in $\\mathbb{Z}$ is zero in every degree except for degree $1$, in which it is $\\mathbb{Z}/3$."
+    "In this example, we use lens coordinates to parametrize a finite sample of the Moore space $M(1,\\mathbb{Z}/3)$, characterized by the fact that its reduced cohomology with coefficients in $\\mathbb{Z}$ is zero in every degree except for degree $1$, in which it is $\\mathbb{Z}/3$."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We confirm that the sample approximates the Moore space by computing persistence homology with coefficients in $\\mathbb{Z}/2$ and $\\mathbb{Z}/3$."
+    "We confirm that the sample approximates the Moore space by computing persistent cohomology with coefficients in $\\mathbb{Z}/2$ and $\\mathbb{Z}/3$."
    ]
   },
   {
