--- a/docs/notebooks/movingDot.ipynb
+++ b/docs/notebooks/movingDot.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Complex projective coordinates on data set of image patches\n",
     "\n",
-    "In this example, we explore the topology of a collection of images of a moving dot, which, as we will show using persistent homology and complex projective coordinates, are parametrized by the 2-sphere.\n",
+    "In this example, we explore the topology of a collection of images of a moving dot, which, as we will show using persistent cohomology and complex projective coordinates, are parametrized by the 2-sphere.\n",
     "Each image patch is a square $d \\times d$ region of pixels.\n",
     "Each pixel can be thought of as a dimension, so each patch lives in $\\mathbb{R}^{d \\times d}$, and a collection of patches can be thought of as a Euclidean point cloud in $\\mathbb{R}^{d \\times d}$."
    ]
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
