--- a/docs/notebooks/twoSphere.ipynb
+++ b/docs/notebooks/twoSphere.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The persistent homology clearly shows one high-prominence two-dimensional void."
+    "The persistent cohomology clearly shows one high-prominence two-dimensional void."
    ]
   },
   {
@@ -209,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
