--- a/docs/notebooks/ImagePatches.ipynb
+++ b/docs/notebooks/ImagePatches.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Real projective coordinates on data set of image patches\n",
     "\n",
-    "In this example, we explore the topology of a collection of image patches capturing line segments, which, as we will show using persistent homology and projective coordinates, are parametrized by the projective plane $RP^2$.\n",
+    "In this example, we explore the topology of a collection of image patches capturing line segments, which, as we will show using persistent cohomology and projective coordinates, are parametrized by the projective plane $RP^2$.\n",
     "Each image patch is a square $d \\times d$ region of pixels.\n",
     "Each pixel can be thought of as a dimension, so each patch lives in $\\mathbb{R}^{d \\times d}$, and a collection of patches can be thought of as a Euclidean point cloud in $\\mathbb{R}^{d \\times d}$."
    ]
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
