--- a/docs/notebooks/genusTwoSurface.ipynb
+++ b/docs/notebooks/genusTwoSurface.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute and display the Rips persistent homology."
+    "Compute and display the Rips persistent cohomology."
    ]
   },
   {
@@ -266,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
