--- a/docs/notebooks/parameters_n_landmarks_and_cocycle_idx.ipynb
+++ b/docs/notebooks/parameters_n_landmarks_and_cocycle_idx.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## The <tt>cocycle_idx</tt> parameter\n",
     "\n",
-    "Once the <tt>n_landmarks</tt> parameter has been chosen and the persistent homology of the landmarks has been computed, the <tt>cocycle_idx</tt> parameter tells the algorithm which persistent cohomology class is used to build the cohomological coordinates.\n",
+    "Once the <tt>n_landmarks</tt> parameter has been chosen and the persistent cohomology of the landmarks has been computed, the <tt>cocycle_idx</tt> parameter tells the algorithm which persistent cohomology class is used to build the cohomological coordinates.\n",
     "Roughly speaking, short-lived classes (that is, classes represented by points close to the diagonal), represent small topological features.\n",
     "This means that cohomological coordinates built using these classes will be constant on large portions of the point cloud, and will parametrize small topological features.\n",
     "Conversely, long-lived classes represent large scale topological features.\n",
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
