--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -44,7 +44,7 @@ MRREVIEWER = {\.{I}smet\ Karaca},
 
 @incollection{circular-coords,
     AUTHOR = {Perea, Jose A.},
-     TITLE = {Sparse circular coordinates via principal {$\Bbb Z$}-bundles},
+     TITLE = {Sparse circular coordinates via principal {$\mathbb{Z}$}-bundles},
  BOOKTITLE = {Topological data analysis---the {A}bel {S}ymposium 2018},
     SERIES = {Abel Symp.},
     VOLUME = {15},
