add references, minor fixes

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -92,7 +92,7 @@ MRREVIEWER = {Ne\v{z}a\ Mramor Kosta},
 }
 
 @article{persistent-cohomology,
-    AUTHOR = {de Silva, Vin and Morozov, Dmitriy and Vejdemo-Johansson,
+    AUTHOR = {{de Silva}, Vin and Morozov, Dmitriy and Vejdemo-Johansson,
               Mikael},
      TITLE = {Dualities in persistent (co)homology},
    JOURNAL = {Inverse Problems},
@@ -115,4 +115,66 @@ MRREVIEWER = {Patrizio\ Frosini},
   title={Columbia object image library ({coil}-20)},
   author={Nene, Sameer A and Nayar, Shree K and Murase, Hiroshi and others},
   year={1996},
+}
+
+@article{vejdemo-pokorny-skraba-kragic,
+  title={Cohomological learning of periodic motion},
+  author={Vejdemo-Johansson, Mikael and Pokorny, Florian T and Skraba, Primoz and Kragic, Danica},
+  journal={Applicable algebra in engineering, communication and computing},
+  volume={26},
+  number={1},
+  pages={5--26},
+  year={2015},
+  publisher={Springer}
+}
+
+@InProceedings{fibered,
+  author =	{Scoccola, Luis and Perea, Jose A.},
+  title =	{{FibeRed: Fiberwise Dimensionality Reduction of Topologically Complex Data with Vector Bundles}},
+  booktitle =	{39th International Symposium on Computational Geometry (SoCG 2023)},
+  pages =	{56:1--56:18},
+  series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
+  ISBN =	{978-3-95977-273-0},
+  ISSN =	{1868-8969},
+  year =	{2023},
+  volume =	{258},
+  editor =	{Chambers, Erin W. and Gudmundsson, Joachim},
+  publisher =	{Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{https://drops.dagstuhl.de/opus/volltexte/2023/17906},
+  URN =		{urn:nbn:de:0030-drops-179068},
+  doi =		{10.4230/LIPIcs.SoCG.2023.56},
+  annote =	{Keywords: topological inference, dimensionality reduction, vector bundle, cocycle}
+}
+
+@article{kang-xu-morozov,
+  title={Evaluating state space discovery by persistent cohomology in the spatial representation system},
+  author={Kang, Louis and Xu, Boyan and Morozov, Dmitriy},
+  journal={Frontiers in computational neuroscience},
+  volume={15},
+  pages={616748},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{gardner-et-al,
+  title={Toroidal topology of population activity in grid cells},
+  author={Gardner, Richard J and Hermansen, Erik and Pachitariu, Marius and Burak, Yoram and Baas, Nils A and Dunn, Benjamin A and Moser, May-Britt and Moser, Edvard I},
+  journal={Nature},
+  volume={602},
+  number={7895},
+  pages={123--128},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{rybakken-et-al,
+  title={Decoding of neural data using cohomological feature extraction},
+  author={Rybakken, Erik and Baas, Nils and Dunn, Benjamin},
+  journal={Neural computation},
+  volume={31},
+  number={1},
+  pages={68--93},
+  year={2019},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
