attempt to fix reference

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,7 +5,7 @@
 }
 
 @article {desilva-morozov-vejdemo,
-    AUTHOR = {de Silva, Vin and Morozov, Dmitriy and Vejdemo-Johansson,
+    AUTHOR = {{de Silva}, Vin and Morozov, Dmitriy and Vejdemo-Johansson,
               Mikael},
      TITLE = {Persistent cohomology and circular coordinates},
    JOURNAL = {Discrete Comput. Geom.},
