test: check that notebooks run without errors, catch exception in a notebook

--- a/docs/notebooks/parameter_standard_range.ipynb
+++ b/docs/notebooks/parameter_standard_range.ipynb
@@ -118,22 +118,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "The cohomology class selected is too short, try setting standard_range to False.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/luisscoccola/code/DREiMac/docs/notebooks/parameter_standard_range.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/luisscoccola/code/DREiMac/docs/notebooks/parameter_standard_range.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m circular_coordinates \u001b[39m=\u001b[39m cc2\u001b[39m.\u001b[39;49mget_coordinates(standard_range\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/dreimac/lib/python3.11/site-packages/dreimac/circularcoords.py:75\u001b[0m, in \u001b[0;36mCircularCoords.get_coordinates\u001b[0;34m(self, perc, cocycle_idx, partunity_fn, standard_range, check_cocycle_condition)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_coordinates\u001b[39m(\n\u001b[1;32m     41\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m     42\u001b[0m     perc\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     46\u001b[0m     check_cocycle_condition\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m     47\u001b[0m ):\n\u001b[1;32m     48\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     49\u001b[0m \u001b[39m    Get circular coordinates.\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[39m        Circular coordinates\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 75\u001b[0m     \u001b[39mreturn\u001b[39;00m ToroidalCoords\u001b[39m.\u001b[39;49mget_coordinates(\n\u001b[1;32m     76\u001b[0m         \u001b[39mself\u001b[39;49m,\n\u001b[1;32m     77\u001b[0m         perc,\n\u001b[1;32m     78\u001b[0m         [cocycle_idx],\n\u001b[1;32m     79\u001b[0m         partunity_fn,\n\u001b[1;32m     80\u001b[0m         standard_range,\n\u001b[1;32m     81\u001b[0m         check_cocycle_condition,\n\u001b[1;32m     82\u001b[0m     )[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/dreimac/lib/python3.11/site-packages/dreimac/toroidalcoords.py:104\u001b[0m, in \u001b[0;36mToroidalCoords.get_coordinates\u001b[0;34m(self, perc, cocycle_idxs, partunity_fn, standard_range, check_cocycle_condition)\u001b[0m\n\u001b[1;32m     98\u001b[0m integer_cocycles \u001b[39m=\u001b[39m [\n\u001b[1;32m     99\u001b[0m     CohomologyUtils\u001b[39m.\u001b[39mlift_to_integer_cocycle(cocycle, prime\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_prime)\n\u001b[1;32m    100\u001b[0m     \u001b[39mfor\u001b[39;00m cocycle \u001b[39min\u001b[39;00m cocycles\n\u001b[1;32m    101\u001b[0m ]\n\u001b[1;32m    103\u001b[0m \u001b[39m# determine radius for balls\u001b[39;00m\n\u001b[0;32m--> 104\u001b[0m r_cover, rips_threshold \u001b[39m=\u001b[39m EMCoords\u001b[39m.\u001b[39;49mget_cover_radius(\n\u001b[1;32m    105\u001b[0m     \u001b[39mself\u001b[39;49m, perc, cohomdeath_rips, cohombirth_rips, standard_range\n\u001b[1;32m    106\u001b[0m )\n\u001b[1;32m    108\u001b[0m \u001b[39m# compute partition of unity and choose a cover element for each data point\u001b[39;00m\n\u001b[1;32m    109\u001b[0m varphi, ball_indx \u001b[39m=\u001b[39m EMCoords\u001b[39m.\u001b[39mget_covering_partition(\u001b[39mself\u001b[39m, r_cover, partunity_fn)\n",
-      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/dreimac/lib/python3.11/site-packages/dreimac/emcoords.py:143\u001b[0m, in \u001b[0;36mEMCoords.get_cover_radius\u001b[0;34m(self, perc, cohomdeath_rips, cohombirth_rips, standard_range)\u001b[0m\n\u001b[1;32m    141\u001b[0m end \u001b[39m=\u001b[39m cohombirth_rips\n\u001b[1;32m    142\u001b[0m \u001b[39mif\u001b[39;00m start \u001b[39m>\u001b[39m end:\n\u001b[0;32m--> 143\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\n\u001b[1;32m    144\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mThe cohomology class selected is too short, try setting standard_range to False.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    145\u001b[0m     )\n\u001b[1;32m    146\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_rips_threshold \u001b[39m=\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m perc) \u001b[39m*\u001b[39m start \u001b[39m+\u001b[39m perc \u001b[39m*\u001b[39m end\n\u001b[1;32m    147\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_r_cover \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_rips_threshold \u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n",
-      "\u001b[0;31mException\u001b[0m: The cohomology class selected is too short, try setting standard_range to False."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cohomology class selected is too short, try setting standard_range to False.\n"
      ]
     }
    ],
    "source": [
-    "circular_coordinates = cc2.get_coordinates(standard_range=True)"
+    "try:\n",
+    "    circular_coordinates = cc2.get_coordinates(standard_range=True)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
